# linux-wallpaper-engine

./: README.md
FedoraWallpaper/: CMakeLists.txt  resources.qrc
FedoraWallpaper/assets/qml/: Main.qml
FedoraWallpaper/assets/shaders/: water.frag
FedoraWallpaper/src/: main.cpp
FedoraWallpaper/src/ui/: MainWindow.cpp  MainWindow.h
